--- a/README.rdoc
+++ b/README.rdoc
@@ -3,25 +3,16 @@
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
-Things you may want to cover:
+Elasticsearch Plugin used
 
-* Ruby version
+* Search Highlighter https://github.com/wikimedia/search-highlighter
 
-* System dependencies
+* Mapper attachment https://github.com/elastic/elasticsearch-mapper-attachments
 
-* Configuration
+* Elasticsearch Head plugin
 
-* Database creation
+* Elasticsearch Hq plugin
 
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
 
 
 Please feel free to use a different markup language if you do not plan to run
